# spellsp

./: Cargo.toml  README.md  flake.nix  test.txt
.direnv/: flake-profile-1-link
.github/workflows/: rust.yml
.helix/: languages.toml
src/: args.rs  data_dirs.rs  definitions.rs  main.rs  spellcheck.rs
