[package]
name = "spellsp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
dotenv = "0.15.0"
ort = "2.0.0-rc.11"
reqwest = "0.13.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tokio-test = "0.4.5"
tower-lsp = "0.20.0"
zspell = "0.5.5"
